fixing overflow 4

--- a/styles.css
+++ b/styles.css
@@ -106,16 +106,16 @@ nav ul li a:hover {
 }
 
 .page-background::before {
-    width: 200px;
-    height: 200px;
+    width: 100px;
+    height: 100px;
     top: 10%;
     left: 10%;
     animation: moveShape 15s linear infinite;
 }
 
 .page-background::after {
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     bottom: 10%;
     right: 10%;
     animation: moveShape 20s linear infinite;
@@ -126,7 +126,7 @@ nav ul li a:hover {
         transform: translate(0, 0);
     }
     50% {
-        transform: translate(200px, 200px);
+        transform: translate(100px, 100px);
     }
     100% {
         transform: translate(0, 0);
